--- a/app.json
+++ b/app.json
@@ -1,15 +1,15 @@
 {
-    "name": "Ultroid UserBot",
+    "name": "ᴍʀ ɢᴏᴋᴜ ᴜsᴇʀʙᴏᴛ",
     "description": "Pluggable telegram userbot, made in python using Telethon.",
-    "logo": "https://graph.org/file/031957757a4f6a5191040.jpg",
+    "logo": "",
     "keywords": [
         "Telethon",
         "telegram",
         "userbot",
         "python",
-        "ultroid"
+        "GOKU_USERBOT"
     ],
-    "repository": "https://github.com/TeamUltroid/Ultroid",
+    "repository": "https://github.com/VIPBOLTE/GOKU_USERBOT",
     "website": "https://ultroid.tech",
     "success_url": "https://t.me/TeamUltroid",
     "stack": "container",
@@ -48,7 +48,7 @@
         }
     },
     "formation": {
-        "ultroid": {
+        "GOKU_USERBOT": {
             "quantity": 1,
             "size": "eco"
         }
