--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "ᴍʀ ɢᴏᴋᴜ ᴜsᴇʀʙᴏᴛ",
+    "name": "ɢᴏᴋᴜ ᴜsᴇʀʙᴏᴛ",
     "description": "Pluggable telegram userbot, made in python using Telethon.",
     "logo": "https://telegra.ph/file/a0c824b3ad40e8bd86db7.jpg",
     "keywords": [
@@ -11,7 +11,7 @@
     ],
     "repository": "https://github.com/VIPBOLTE/GOKU_USERBOT",
     "website": "https://ultroid.tech",
-    "success_url": "https://t.me/goku_groupz",
+    "success_url": "https://t.me/Blade_x_community",
     "stack": "container",
     "env": {
         "API_ID": {
@@ -28,13 +28,10 @@
             "description": "Session String (telethon or pyrogram) for your telegram user account. The userbot will NOT work without a session string!!",
             "value": ""
         },
-        "REDIS_URI": {
+        "MONGO_URI": {
             "description": "Redis endpoint URL, from redislabs.com",
             "value": ""
-        },
-        "REDIS_PASSWORD": {
-            "description": "Redis endpoint password, from redislabs.com",
-            "value": ""
+            "required": true
         },
         "HEROKU_API": {
             "description": "Heroku API token. Mandatory for Heroku Deploy...",
@@ -45,12 +42,16 @@
             "description": "Name of your Heroku app, given in the first blank on this page. To be added if deploying to heroku ONLY.",
             "value": "",
             "required": false
-        }
+        }, 
+        "ENV": {
+        "description":"env"
+        "value": ""
+        "required": true
     },
     "formation": {
-        "GOKU_USERBOT": {
+        "ultroid": {
             "quantity": 1,
             "size": "eco"
         }
     }
-}
+    }
