--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "ɢᴏᴋᴜ ᴜsᴇʀʙᴏᴛ",
+    "name": "GOKU_USERBOT",
     "description": "Pluggable telegram userbot, made in python using Telethon.",
     "logo": "https://telegra.ph/file/a0c824b3ad40e8bd86db7.jpg",
     "keywords": [
@@ -28,10 +28,13 @@
             "description": "Session String (telethon or pyrogram) for your telegram user account. The userbot will NOT work without a session string!!",
             "value": ""
         },
-        "MONGO_URI": {
+        "REDIS_URI": {
             "description": "Redis endpoint URL, from redislabs.com",
             "value": ""
-            "required": true
+        },
+        "REDIS_PASSWORD": {
+            "description": "Redis endpoint password, from redislabs.com",
+            "value": ""
         },
         "HEROKU_API": {
             "description": "Heroku API token. Mandatory for Heroku Deploy...",
@@ -42,16 +45,12 @@
             "description": "Name of your Heroku app, given in the first blank on this page. To be added if deploying to heroku ONLY.",
             "value": "",
             "required": false
-        }, 
-        "ENV": {
-        "description":"env"
-        "value": ""
-        "required": true
+        }
     },
     "formation": {
-        "ultroid": {
+        "GOKU_USERBOT": {
             "quantity": 1,
             "size": "eco"
         }
     }
-    }
+}
