--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,7 +1,7 @@
 blank_issues_enabled: true
 contact_links:
-  - name: Ultroid Support
-    url: https://t.me/UltroidSupportChat
+  - name: GOKU COMMUNITY
+    url: https://t.me/goku_groupz
     about: Please drop your doubts or queries there for an immediate response.
   - name: Documentation
     url: https://ultroid.tech/
